--- a/Forest/nbproject/coverage.properties
+++ b/Forest/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Sun Sep 30 18:11:46 EEST 2012
-coverage.activity=ON
+#Mon Oct 01 22:42:01 EEST 2012
+coverage.activity=OFF
 project.type=java
-coverage.templateFile=coverage/template.emma
 coverage.coverageFile=coverage/coverage.emma
+coverage.templateFile=coverage/template.emma
