--- a/Forest/nbproject/coverage.properties
+++ b/Forest/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Sat Oct 06 04:54:10 EEST 2012
-coverage.activity=OFF
+#Sun Oct 07 21:29:48 EEST 2012
+coverage.activity=ON
 project.type=java
-coverage.coverageFile=coverage/coverage.emma
 coverage.templateFile=coverage/template.emma
+coverage.coverageFile=coverage/coverage.emma
