--- a/Forest/nbproject/coverage.properties
+++ b/Forest/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Sun Oct 07 21:29:48 EEST 2012
-coverage.activity=ON
+#Mon Oct 08 23:25:26 EEST 2012
+coverage.activity=OFF
 project.type=java
-coverage.templateFile=coverage/template.emma
 coverage.coverageFile=coverage/coverage.emma
+coverage.templateFile=coverage/template.emma
